feat: add user authentication and dashboard functionality

--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -14,8 +14,18 @@
                             <li><a class="<%= link === 'index' && 'active' %>" href="/">Home</a></li>
                             <li><a class="<%= link === 'about' && 'active' %>" href="/about">About</a></li>
                             <li><a class="<%= link === 'photos' && 'active' %>" href="/photos">Photos</a></li>
+                            <% if(user){ %>
+
+                            <li><a class="<%= link === 'dashboard' && 'active' %>" href="/dashboard">Dashboard</a></li>
+                            <li><a href="/logout">Logout</a></li>
+                            <% }else{ %>
                             <li><a class="<%= link === 'login' && 'active' %>" href="/login">Login</a></li>
                             <li><a class="<%= link === 'register' && 'active' %>" href="/register">Register</a></li>
+
+                            <% } %>
+
+
+
                             <!-- <li><a href="services.html">Services</a></li> -->
                             <!-- <li><a href="projects.html">Projects</a></li> -->
                             <!-- <li><a href="blog.html">Blog</a></li> -->
@@ -25,12 +35,6 @@
                         </button>
                     </nav>
                 </div>
-            </div>
-            <div class=" col-md-2 di_none">
-                <ul class="email text_align_right">
-                    <li><a href="Javascript:void(0)">Login</a></li>
-                    <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                </ul>
             </div>
         </div>
     </div>
